Corrections made in web and about page

--- a/about.html
+++ b/about.html
@@ -79,11 +79,8 @@
 <div class="d-flex flex-column justify-content-center px-5 full-screen">
         <div class="container text-center">
           <p class="head1">Who Are We?</p>
-          <p class="subTitle1">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam,
-            purus sit amet luctus venenatis, lectus magna fringilla urna,
-            porttitor rhoncus dolor purus non enim praesent elementum facilisis
-            leo, vel fringilla est ullamcorper eget nulla facilisi
+          <p class="subTitle1 w-75 mx-auto">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore accusamus commodi perspiciatis quia voluptate perferendis ex odit vitae veritatis. Temporibus deleniti suscipit quis dignissimos.
           </p>
         </div></div>
       </div>
