--- a/webShow.html
+++ b/webShow.html
@@ -113,37 +113,34 @@
       </div>
       <div class="d-flex flex-row" id="webFeaturesMain">
         <div
-          class="feature-text d-flex flex-column  justify-content-around w-50"
+          class="feature-text d-flex flex-column justify-content-center"
           id="webFeatures"
         >
           <div class="feature-item-web p-1" data-aos="fade-up">
+            
+            <i class="fa-solid fa-thumbs-up icon-color my-3"></i>
             <h1 class="head2 webFeaturesHead">Book Appointments</h1>
-            <p class="para2  webFeaturesPara">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
-              quis? Esse culpa voluptatibus natus odit, officiis totam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
-              quis? Esse culpa voluptatibus natus odit, officiis totam.
+            <p class="para1 webFeaturesPara">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias adipisci laudantium, ipsa non at distinctio sint impedit officia numquam fuga voluptates eveniet cupiditate dolore.
             </p>
           </div>
           <div class="feature-item-web p-1" data-aos="fade-up">
+            
+            <i class="fa-solid fa-thumbs-up icon-color my-3"></i>
             <h1 class="head2 webFeaturesHead">Book Appointments</h1>
-            <p class="para2  webFeaturesPara">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
-              quis? Esse culpa voluptatibus natus odit, officiis totam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi
-              quis? Esse culpa voluptatibus natus odit, officiis totam.
+            <p class="para1 webFeaturesPara">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias adipisci laudantium, ipsa non at distinctio sint impedit officia numquam fuga voluptates eveniet cupiditate dolore.
             </p>
           </div>
         </div>
-        <div class="feature-image d-flex w-50">
-          <div class="w-75">
-            <div class="blob mx-auto">
+        <div class="feature-image d-flex webPanelImg">
+          <!-- <div class="w-75"> -->
+            <div class="webPanel blob mx-auto">
             <img
               src="./assets/images/WebMockups/Appoinments.png"
               alt="features image"
-              class="w-100"
             /></div>
-          </div>
+          <!-- </div> -->
         </div>
       </div>
     </div>
