Correction in web page

--- a/webShow.html
+++ b/webShow.html
@@ -134,13 +134,13 @@
           </div>
         </div>
         <div class="feature-image d-flex webPanelImg">
-          <!-- <div class="w-75"> -->
+          <div class="w-100">
             <div class="webPanel blob mx-auto">
             <img
               src="./assets/images/WebMockups/Appoinments.png"
               alt="features image"
             /></div>
-          <!-- </div> -->
+          </div>
         </div>
       </div>
     </div>
